--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-default margin">
       <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="col-xs-12 navbar-header">
            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
              <span class="sr-only">Toggle navigation</span>
              <span class="icon-bar"></span>
@@ -92,11 +92,11 @@
 
 <!-- seccion 2-->
 
-    <div class="container-fluid pink">
+    <div class="container-fluid pink pink1">
       <img src="" alt="">
 
       <div class="row">
-        <div class="jumbotron col-md-5 col-md-push-7 green jbt">
+        <div class="jumbotron col-xs-12 col-md-5 col-md-push-7 green jbt">
           <form>
             <div class="form-group color">
               <h4>Iniciar Sesión</h4>
@@ -105,7 +105,9 @@
             <div class="form-group">
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
             </div>
-            <a href="views/pagina-principal.html" class="button1 color" type="submit" class="btn btn-default">Iniciar Sesión</a>
+            <div class="button3">
+              <a href="views/pagina-principal.html" class="button1 color" type="submit" class="btn btn-default">Iniciar Sesión</a>
+            </div>
           </form>
         </div>
       </div>
